--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "jp.dagon.firstandroidbook.mysize2"
         minSdkVersion 21
         targetSdkVersion 29
